[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/part_delivery/PartDelivery.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[node name="PartDelivery" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 0, 13 )
script = ExtResource( 1 )

[node name="Dropoff1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff1"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff7" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.05805 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff7"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff9" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.89991, 0, -9.05805 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff9"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff2"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff3" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Dropoff3"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff4"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff5"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff6" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.24157 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff6"]
mesh = SubResource( 1 )
material/0 = null

[node name="Dropoff8" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.89991, 0, 9.24157 )

[node name="MeshInstance" type="MeshInstance" parent="Dropoff8"]
mesh = SubResource( 1 )
material/0 = null
